tweaked about story; bumped copyright to 2008; improved readability of contact page; fixed bug in URL microformat on contact page; removed br from contact page.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -86,3 +86,11 @@ vcard Contact styling */
 .adr {
 	display: block;
 	}
+	
+/*
+There's nowhere to put this word in the markup without polluting the pertinent
+hcard structure, so we'll stick it into the presentation.
+*/
+.tel .type:after {
+	content: ' phone: ';
+}
